# 3D-game-engine

./: CMakeLists.txt  README.md
src/: main.cpp
src/camera/: CameraController.cpp  CameraController.hpp
src/core/: GameEngine.cpp  GameEngine.hpp
src/ground/: Ground.cpp  Ground.hpp
src/inputs/: CameraInput.cpp  CameraInput.hpp  InputManager.cpp  InputManager.hpp  MovementInput.cpp  MovementInput.hpp
src/models/: ModelLoader.cpp  ModelLoader.hpp
src/physics/: PhysicsBody.cpp  PhysicsBody.hpp
src/player/: Player.cpp  Player.hpp
src/rendering/: Renderer.cpp  Renderer.hpp
src/terrain/: TerrainGenerator.cpp  TerrainGenerator.hpp
